2005-03-27  Tom Tromey  <tromey@redhat.com>

	* abi.cc (build_direct_class_reference): New method.
	(build_new): Fix type of result.
	(build_class_reference): Fix type of array reference.
	* abi.hh (gcj_abi::build_direct_class_reference): New method.
	(cxx_abi::build_direct_class_reference): Likewise
	(bc_abi::build_direct_class_reference): Declare.
	* classobj.hh (class_object_creator::create_index_table):
	Updated.
	* classobj.cc (create_index_table): Added 'table_decl' argument.
	Fixed computation of constructor contents.
	(create_class_instance): Updated.  Use
	build_direct_class_reference.
	(handle_interfaces): Use build_direct_class_reference.
	* builtins.cc (get_itable_decl): New method.
	* builtins.hh (tree_builtins::get_itable_decl): Declare.
	(tree_builtins::itable_map): New field.

2005-03-27  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_assert): Updated for change to map_new.
	(create_stringbuffer): Likewise.
	(visit_new): Likewise.
	* decl.cc (build_oa_table_types): Elements of otable are of
	type_jint.
	* abi.hh (gcj_abi::build_new): Changed type of 'constructor'
	argument.
	(cxx_abi::build_new): Updated.
	(bc_abi::build_new): Updated.
	* builtins.hh (tree_builtins::get_atable_decl): Declare.
	(tree_builtins::get_otable_decl): Likewise.
	(tree_builtins::atable_map): New field.
	(tree_builtins::otable_map): New field.
	(tree_builtins::map_new): Updated.
	* builtins.cc (get_atable_decl): New method.
	(get_otable_decl): Likewise.
	(map_new): Changed type of 'constructor'.
	* abi.cc (build_class_reference): Added assertion.
	(build_field_reference): Get otable and atable.
	(build_new): Wrote.  Updated argument types.
	(build_method_call): Wrote.

2005-03-27  Tom Tromey  <tromey@redhat.com>

	* lower.cc (visit_bytecode_block): Fix use of statement
	iterators.

	* classobj.cc (create_index_table): Indentation fix.

2005-03-26  Tom Tromey  <tromey@redhat.com>

	* lower.cc (visit_bytecode_block): Clean up label handling.
